Refactor Integer instantiation to factory method usage
Replaced deprecated `new Integer()` with `Integer.valueOf()` throughout the codebase for improved performance and compliance with modern Java best practices. Added static imports where applicable for cleaner code. Also included a TODO comment to streamline CSV serialization using OpenCSV.