@@ -16,6 +16,8 @@ import etl.etlinputs.managedinputs.bdc.BDCManagedInput;
 import etl.job.entity.hpds.AllConcepts;
 import etl.jobs.Job;
 
+import static java.lang.Integer.valueOf;
+
 public class GlobalVariableGenerator extends BDCJob {
 	
 	public static void main(String[] args) {
@@ -73,7 +75,7 @@ public class GlobalVariableGenerator extends BDCJob {
 		for(String[] pm: patientMappings) {
 			if(NumberUtils.isCreatable(pm[2])) {
 				AllConcepts ac = new AllConcepts();
-				ac.setPatientNum(new Integer(pm[2]));
+				ac.setPatientNum(Integer.valueOf(pm[2]));
 				ac.setConceptPath(root);
 				ac.setTvalChar(managedInput.getStudyIdentifier() + ".v1_" + pm[0]);
 				ac.setStartDate("0");
@@ -93,7 +95,7 @@ public class GlobalVariableGenerator extends BDCJob {
 		for(String[] pm: patientMappings) {
 			if(NumberUtils.isCreatable(pm[2])) {
 				AllConcepts ac = new AllConcepts();
-				ac.setPatientNum(new Integer(pm[2]));
+				ac.setPatientNum(valueOf(pm[2]));
 				ac.setConceptPath("µ_consentsµ");
 				ac.setTvalChar(studyConsent);
 				ac.setStartDate("0");
@@ -101,7 +103,7 @@ public class GlobalVariableGenerator extends BDCJob {
 			}
 			if(NumberUtils.isCreatable(pm[2])) {
 				AllConcepts ac = new AllConcepts();
-				ac.setPatientNum(new Integer(pm[2]));
+				ac.setPatientNum(valueOf(pm[2]));
 				ac.setConceptPath("µ_topmed_consentsµ");
 				ac.setTvalChar(studyConsent);
 				ac.setStartDate("0");
@@ -123,7 +125,7 @@ public class GlobalVariableGenerator extends BDCJob {
 		for(String[] pm: patientMappings) {
 			if(NumberUtils.isCreatable(pm[2])) {
 				AllConcepts ac = new AllConcepts();
-				ac.setPatientNum(new Integer(pm[2]));
+				ac.setPatientNum(valueOf(pm[2]));
 				ac.setConceptPath("µ_studies_consentsµ");
 				
 				ac.setTvalChar("TRUE");
@@ -135,7 +137,7 @@ public class GlobalVariableGenerator extends BDCJob {
 		for(String[] pm: patientMappings) {
 			if(NumberUtils.isCreatable(pm[2])) {
 				AllConcepts ac = new AllConcepts();
-				ac.setPatientNum(new Integer(pm[2]));
+				ac.setPatientNum(valueOf(pm[2]));
 				ac.setConceptPath("µ_studies_consentsµ" + studyConsent + "µ");
 				ac.setTvalChar("TRUE");
 				ac.setStartDate("0");
@@ -145,7 +147,7 @@ public class GlobalVariableGenerator extends BDCJob {
 		for(String[] pm: patientMappings) {
 			if(NumberUtils.isCreatable(pm[2])) {
 				AllConcepts ac = new AllConcepts();
-				ac.setPatientNum(new Integer(pm[2]));
+				ac.setPatientNum(valueOf(pm[2]));
 				ac.setConceptPath("µ_studies_consentsµ" + studyConsent + "µ" + consentShortName + "µ");
 				ac.setTvalChar("TRUE");
 				ac.setStartDate("0");
@@ -162,7 +164,7 @@ public class GlobalVariableGenerator extends BDCJob {
 		for(String[] pm: patientMappings) {
 			if(NumberUtils.isCreatable(pm[2])) {
 				AllConcepts ac = new AllConcepts();
-				ac.setPatientNum(new Integer(pm[2]));
+				ac.setPatientNum(valueOf(pm[2]));
 				ac.setConceptPath("µ_studiesµ" + fullname + "µ");
 				ac.setTvalChar("TRUE");
 				ac.setStartDate("0");
